--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,42 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #eee;
 }
 
 .GameBoard {
-  display: flex;
-  flex-wrap: wrap;
-  width: 400px;
-}
-
-.cell {
+  display: grid;
+  grid-template-columns: repeat(20, 20px);
+  grid-gap: 1px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
 }
 
+.cell {
+  width: 20px;
+  height: 20px;
+  background-color: #f7f7f7;
+  border: 1px solid #eaeaea;
+}
+
 .snake {
-  background-color: #00a;
+  background-color: green;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+@keyframes eat {
+  0% { transform: scale(.9); }
+  50% { transform: scale(.95); }
+  100% { transform: scale(1); }
 }
 
 .food {
-  background-color: #a00;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%; /* Makes the food look like a circle */
+  box-shadow: 0 0 5px rgba(255, 0, 0, 0.5); /* A subtle glow */
+  animation: eat 1s infinite;
 }
