--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,13 @@
   text-align: center;
   margin-bottom: 10px;
 }
+
+.score {
+  font-size: 1em;
+  font-weight: bold;
+  color: white;
+  background-color: #333;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
